--- a/Projeto_Web/Pg002/layout2.css
+++ b/Projeto_Web/Pg002/layout2.css
@@ -30,6 +30,25 @@ h1 {
     margin: 0;
 }
 
+#menu {
+    background-color: #343a40;
+}
+
+.nav a {
+    color: #ffffff;
+  }
+  
+  .nav a:hover {
+    background-color: #454d55;
+  }
+
+main{
+    background-color: #4f575e;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
 
 .navbar {
   background-color: #5d5959;
