add envio de pdf
adicionando envio de currículo em pdf

--- a/Projeto_Web/pg003/layout3.css
+++ b/Projeto_Web/pg003/layout3.css
@@ -4,7 +4,7 @@ body{
 header#logotipo {
     padding: 20px;
     text-align: center;
-    background-image: url(logo.jpeg);
+    background-image: url(../imagens/Capturar.PNG);
     background-color: #ed1c24;
     background-repeat: no-repeat;
     background-size: contain;
